--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.12",
+    "bootstrap": "^5.3.0-alpha3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-day-picker": "^8.6.0",
